--- a/src/app/formula/formula.component.html
+++ b/src/app/formula/formula.component.html
@@ -1,1 +1,5 @@
-<p>formula works!</p>
+<div>
+  <span>포뮬러 기능</span>
+  <p>특정 컬럼을 기준으로, 지정한 컬럼들에 대한 소계 값을 보여주는 기능입니다.</p>
+  <div id="sheetDiv" style="width: 100%; height: 70vh;"></div>
+</div>
