--- a/src/app/multirecord/multirecord.component.html
+++ b/src/app/multirecord/multirecord.component.html
@@ -1,1 +1,5 @@
-<p>multirecord works!</p>
+<div>
+  <span>멀티레코드 기능</span>
+  <p>일반적인 데이터 그리드는 하나의 데이터가 하나의 행으로 보여지는데, 멀티 레코드는 하나의 데이터를 여러 행으로 표현해서 많은 데이터를 한 번에 제공합니다.</p>
+  <div id="sheetDiv" style="width: 100%; height: 70vh;"></div>
+</div>
