--- a/src/app/serverscrollpaging/serverscrollpaging.component.html
+++ b/src/app/serverscrollpaging/serverscrollpaging.component.html
@@ -1,1 +1,5 @@
-<p>serverscrollpaging works!</p>
+<div>
+  <span>서버 스크롤 페이징</span>
+  <p>서버에서 데이터를 받아서 스크롤 페이징을 하는 방법을 소개합니다.</p>
+  <div id="sheetDiv" style="width: 100%; height: 70vh;"></div>
+</div>
