--- a/src/app/subsum/subsum.component.html
+++ b/src/app/subsum/subsum.component.html
@@ -1,1 +1,12 @@
-<p>subsum works!</p>
+<div>
+  <span>소계 기능</span>
+  <p>특정 컬럼을 기준으로, 지정한 컬럼들에 대한 소계 값을 보여주는 기능입니다.</p>
+  <div class="example-button-row">
+    <button mat-raised-button (click)="onSubSum(1);">단일 컬럼 소계</button>
+    <button mat-raised-button (click)="onSubSum(2);">단일 컬럼 소계/누계</button>
+    <button mat-raised-button (click)="onSubSum(3);">다중 컬럼 소계</button>
+    <button mat-raised-button (click)="onSubSum(4);">다중 컬럼 소계/누계</button>
+    <button mat-raised-button (click)="onSubSum(5);">소계행 삭제</button>
+  </div>
+  <div id="sheetDiv" style="width: 100%; height: 70vh;"></div>
+</div>
