update button style

--- a/src/app/dialog/dialog.matertial.component.html
+++ b/src/app/dialog/dialog.matertial.component.html
@@ -3,5 +3,5 @@
   <div id="dialogDiv" style="width: 100%; height: 35vh;"></div>
 </div>
 <div mat-dialog-actions>
-  <button mat-button mat-dialog-close>Close</button>
+  <button mat-raised-button color="accent">Close</button>
 </div>
