--- a/src/app/dialog/dialog.component.html
+++ b/src/app/dialog/dialog.component.html
@@ -2,7 +2,7 @@
   <span>시트 + 다이얼로그</span>
   <p>다이얼로그, 모달 창 위에 시트를 띄웁니다.</p>
   <div class="example-button-row">
-    <button mat-raised-button (click)="onOpenDialog();">MATERIAL UI</button>
+    <button mat-raised-button (click)="onOpenDialog();" color="primary">MATERIAL UI</button>
   </div>
   <div id="sheetDiv" style="width: 100%; height: 70vh;"></div>
 </div>
