--- a/src/app/dialog/dialog.component.html
+++ b/src/app/dialog/dialog.component.html
@@ -1,6 +1,6 @@
 <div>
-  <span>시트 + 다이얼로그</span>
-  <p>다이얼로그, 모달 창 위에 시트를 띄웁니다.</p>
+  <span class="desc_title">시트 + 다이얼로그</span>
+  <p class="desc_sub">다이얼로그, 모달 창 위에 시트를 띄웁니다.</p>
   <div class="example-button-row">
     <button mat-raised-button (click)="onOpenDialog();" color="primary">MATERIAL UI</button>
   </div>
