--- a/src/app/type/type.component.html
+++ b/src/app/type/type.component.html
@@ -1,5 +1,7 @@
 <div>
-  <span>컬럼 별 타입</span>
-  <p>각 컬럼별 설정 가능한 Type에 대한 예제입니다.</p>
+  <div>
+    <span class="desc_title">컬럼 별 타입</span>
+    <p class="desc_sub">각 컬럼별 설정 가능한 Type에 대한 예제입니다.</p>
+  </div>
   <div id="sheetDiv" style="width: 100%; height: 70vh;"></div>
 </div>
