--- a/src/app/dataload/dataload.component.html
+++ b/src/app/dataload/dataload.component.html
@@ -1,6 +1,6 @@
 <div>
-  <span>대용량 조회</span>
-  <p>IBSheet8 은 새로운 렌더방식을 이용해, 대용량 데이터 조회/조작을 사용할 수 있습니다.</p>
+  <span class="desc_title">대용량 조회</span>
+  <p class="desc_sub">IBSheet8 은 새로운 렌더방식을 이용해, 대용량 데이터 조회/조작을 사용할 수 있습니다.</p>
   <span>조회 건 수:</span>
   <mat-form-field appearance="fill" style="width: 20%;">
     <mat-label>조회 건 수를 지정해주세요.</mat-label>
