--- a/src/app/form/form.component.css
+++ b/src/app/form/form.component.css
@@ -1,3 +1,14 @@
 .form-input .mat-form-field + .mat-form-field {
   margin-left: 8px;
 }
+.desc_title {
+  color: #000;
+  font-size: 1.1rem;
+  font-weight: bold;
+}
+.desc_sub {
+  color: #4c4c57;
+  font-size: 1rem;
+  margin-top: 14px;
+  margin-bottom: 14px;
+}
