--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -1,6 +1,6 @@
 <div>
-  <span>Form 형태를 이용한 상세보기</span>
-  <p>시트와 form 간의 연동을 통해 행 선택시 내용을 form 에서 확인하고 form 의 내용을 수정하여 시트의 반영할 수 있습니다.</p>
+  <span class="desc_title">Form 형태를 이용한 상세보기</span>
+  <p class="desc_sub">시트와 form 간의 연동을 통해 행 선택시 내용을 form 에서 확인하고 form 의 내용을 수정하여 시트의 반영할 수 있습니다.</p>
   <div class="form-input">
     <h2>상세 보기</h2>
     <div>
