--- a/src/app/master-detail/master-detail.component.html
+++ b/src/app/master-detail/master-detail.component.html
@@ -1,6 +1,6 @@
 <div>
-  <span>마스터/디테일 기능</span>
-  <p>두 개의 시트를 이용하여 한 시트의 행 이동 시, 다른 시트의 데이터를 로드하는 방법을 알아봅시다.</p>
+  <span class="desc_title">마스터/디테일 기능</span>
+  <p class="desc_sub">두 개의 시트를 이용하여 한 시트의 행 이동 시, 다른 시트의 데이터를 로드하는 방법을 알아봅시다.</p>
   <div style="display: flex;">
     <div id="sheetDiv1" style="width: 30%; height: 70vh;"></div>
     <div id="sheetDiv2" style="width: 69%; height: 70vh;"></div>
