--- a/src/app/subsum/subsum.component.html
+++ b/src/app/subsum/subsum.component.html
@@ -1,6 +1,6 @@
 <div>
-  <span>소계 기능</span>
-  <p>특정 컬럼을 기준으로, 지정한 컬럼들에 대한 소계 값을 보여주는 기능입니다.</p>
+  <span class="desc_title">소계 기능</span>
+  <p class="desc_sub">특정 컬럼을 기준으로, 지정한 컬럼들에 대한 소계 값을 보여주는 기능입니다.</p>
   <div class="example-button-row">
     <button mat-raised-button (click)="onSubSum(1);">단일 컬럼 소계</button>
     <button mat-raised-button (click)="onSubSum(2);">단일 컬럼 소계/누계</button>
