--- a/src/app/tree/tree.component.html
+++ b/src/app/tree/tree.component.html
@@ -1,6 +1,6 @@
 <div>
-  <span>트리 예제</span>
-  <p>트리 관련 예제 입니다.</p>
+  <span class="desc_title">트리 예제</span>
+  <p class="desc_sub">트리 관련 예제 입니다.</p>
   <span>지정한 레벨만큼 트리를 접거나 펼칠 수 있습니다.</span>
   <mat-form-field appearance="fill" style="width: 20%;">
     <mat-label>트리 레벨을 지정해주세요.</mat-label>
