--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,5 +1,5 @@
 :host {
-  font-family: Noto Sans CJK KR,sans-serif;
+  font-family: Noto Sans CJK KR, sans-serif;
   font-size: 14px;
   color: #333;
   box-sizing: border-box;
@@ -41,37 +41,76 @@ h6 {
   margin: 60px auto;
   padding: 0 16px;
 }
-.content > :first-child {
+
+.content> :first-child {
   width: 100%;
   background: rgb(247, 247, 247);
 }
 
 a {
-text-decoration: none;
+  text-decoration: none;
+  color: #000;
 }
 
 .content_title {
-margin: auto;
-margin-top: 7px;
-max-width: 1200px;
+  margin: auto;
+  margin-top: 7px;
+  max-width: 1200px;
 }
 
 .main_title {
-color: #000;
-font-size: 40px;
-font-weight: bold;
-font-family: Noto Sans CJK KR,sans-serif;
+  color: #000;
+  font-size: 40px;
+  font-weight: bold;
+  font-family: Noto Sans CJK KR, sans-serif;
 }
 
 .sub_title {
-color: #000;
-font-size: 18px;
-margin-top: 14px;
-margin-bottom: 14px;
+  color: #000;
+  font-size: 1.1rem;
+  margin-top: 14px;
+  margin-bottom: 14px;
 }
 
 .main {
-max-width: 1200px;
-margin: 0px auto;
-padding-top: 15px;
+  max-width: 1200px;
+  margin: 0px auto;
+  padding-top: 15px;
+}
+
+.foot_list {
+  color: #000;
+  font-size: 1.4rem;
+  margin-top: 14px;
+  margin-bottom: 14px;
+}
+
+.foot_list_desc {
+  font-size: 1.2rem;
+}
+
+.foot_copyright {
+  text-align: center;
+  padding-top: 40px;
+  color: rgba(0, 0, 0, 0.54);
+}
+
+.title_button_sandbox {
+  margin-right: 12px;
+}
+
+.title_button_sandbox:hover {
+  box-shadow: 0px 3px 1px -2px rgb(0 0 0 / 20%), 0px 2px 2px 0px rgb(0 0 0 / 14%), 0px 1px 5px 0px rgb(0 0 0 / 12%);
+  background-color: #e0e0e0;
+}
+
+.title_button_git {
+  background: #000;
+  color: #fff;
+  margin-right: 12px;
+}
+
+.title_button_git:hover {
+  box-shadow: 0px 2px 4px -1px rgb(0 0 0 / 20%), 0px 4px 5px 0px rgb(0 0 0 / 14%), 0px 1px 10px 0px rgb(0 0 0 / 12%);
+  background-color: #d5d5d5;
 }
