--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
   <div style="padding-left: 24px; padding-right: 24px;">
     <span class="material-icons" style="font-size: 1.3em;">grid_view</span>
     <a href="/">
-      <span style="color: #000;font-size: 24px;">IBSheet8</span>
+      <span style="color: #fff;font-size: 24px;">IBSheet8</span>
     </a>
   </div>
   <div class="spacer"></div>
@@ -11,11 +11,18 @@
 <div class="content" role="main">
   <div>
     <div class="content_title">
+      <span class="material-icons" style="color: #fd3875; font-size: 2.0em;">grid_view</span>
       <span class="main_title">IBSheet8</span>
       <p class="sub_title">Loader를 사용하여 IBSheet8의 대용량 조회, 높은 자유도, 다양한 렌더링 방식 등 다양한 기능을 Angular 환경에서 제공합니다.</p>
       <div style="padding-top: 20px;">
-        <a mat-raised-button href="https://www.google.com/" target="_blank">SANDBOX</a>
-        <a mat-raised-button href="https://www.google.com/" target="_blank">GITHUB</a>
+        <a class="title_button_sandbox" mat-raised-button href="https://www.google.com/" target="_blank">
+          <fa-icon [icon]="['fas', 'code']"></fa-icon>
+          SANDBOX
+        </a>
+        <a class="title_button_git" mat-raised-button href="https://github.com/ibsheet/loader-angular-guide-sample" target="_blank">
+          <fa-icon [icon]="['fab', 'github']"></fa-icon>
+          GITHUB
+        </a>
       </div>
     </div>
   </div>
@@ -23,6 +30,61 @@
   <div style="width:100%;">
     <div class="main">
       <router-outlet></router-outlet>
+    </div>
+  </div>
+
+  <div style="padding: 48px; background-color: #fff;">
+    <div style="margin: 0px auto; max-width: 1200px;">
+      <span class="material-icons" style="color: #fd3875; font-size: 2em;">book</span>
+      <span class="main_title">
+        Provide
+      </span>
+      <ul>
+        <li>
+          <span class="foot_list">
+            <a href="https://www.ibsheet.com/" target="_blank">Package</a>
+          </span>
+          <span class="foot_list_desc">: 해당 프로젝트를 실행하려면 ibsheet 라이브러리가 포함된 패키지가 필요합니다.</span>
+        </li>
+      </ul>
+      <ul>
+        <li>
+          <span class="foot_list">
+            <a href="https://github.com/ibsheet/loader" target="_blank">Loader</a>
+          </span>
+          <span class="foot_list_desc">: SPA 환경에서 IBSheet8 을 사용하기 위한 라이브러리입니다.</span>
+        </li>
+      </ul>
+      <ul>
+        <li>
+          <span class="foot_list">
+            <a href="https://ibsheet.github.io/loader-manual/" target="_blank">IBSheet Loader Manual</a>
+          </span>
+          <span class="foot_list_desc">: IBSheet-Loader 를 사용하기 위한 메뉴얼 안내입니다.</span>
+        </li>
+      </ul>
+      <ul>
+        <li>
+          <span class="foot_list">
+            <a href="https://docs.ibleaders.com/ibsheet/v8/manual/#docs/intro/feature" target="_blank">IBSheet8 Manual</a>
+          </span>
+          <span class="foot_list_desc">: IBSheet8 의 다양한 기능을 쉽게 사용할 수 있도록 메뉴얼을 제공합니다.</span>
+        </li>
+      </ul>
+      <ul>
+        <li>
+          <span class="foot_list">
+            <a href="https://demo.ibleaders.com/ibsheet/v8/samples/customer-sample/html/main.html" target="_blank">IBSheet8 Sample</a>
+          </span>
+          <span class="foot_list_desc">: 더 다양한 샘플이 모여있는 IBSheet8 Demo Sample 을 제공합니다.</span>
+        </li>
+      </ul>
+      <div>
+        <div class="foot_copyright">
+          <p>2022 IBSheet8 React Guide Sample</p>
+          <span>Copyright @ IBSheet8 2022</span>
+        </div>
+      </div>
     </div>
   </div>
 
