--- a/src/app/merge/merge.component.html
+++ b/src/app/merge/merge.component.html
@@ -1,6 +1,6 @@
 <div>
-  <span>자동 머지 기능</span>
-  <p>헤더, 데이터 영역의 각 셀들의 값이 같은 경우 자동으로 병합시킬 수 있습니다.</p>
+  <span class="desc_title">자동 머지 기능</span>
+  <p class="desc_sub">헤더, 데이터 영역의 각 셀들의 값이 같은 경우 자동으로 병합시킬 수 있습니다.</p>
   <mat-form-field appearance="fill" style="width: 33%;">
     <mat-label>헤더 머지 값을 선택해주세요.</mat-label>
     <mat-select (selectionChange)="OnHeaderSelect($event.value);">
