--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -81,7 +81,7 @@
       </ul>
       <div>
         <div class="foot_copyright">
-          <p>2022 IBSheet8 React Guide Sample</p>
+          <p>© 2022 IBSheet8 Angular Guide Sample</p>
           <span>Copyright @ IBSheet8 2022</span>
         </div>
       </div>
