Update: loader 초기화 수정

--- a/src/styles.css
+++ b/src/styles.css
@@ -3,7 +3,7 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Noto Sans CJK KR,sans-serif; }
-.IBCellHeader{color:white;background:#fd3875;border-bottom:1px solid #6F7F94;border-right:1px solid #6F7F94}
+.IBCellHeader{color:white;background:#fd3875 !important;}
 
 .content_title {
   padding: 48px 0px 24px;
