--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="toolbar" role="banner">
   <div style="padding-left: 24px; padding-right: 24px;">
     <span class="material-icons" style="font-size: 1.3em;">grid_view</span>
-    <a href="/">
+    <a href="./">
       <span style="color: #fff;font-size: 24px;">IBSheet8</span>
     </a>
   </div>
