🎨Refactor: Stackblitz 추가

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,7 +15,7 @@
       <span class="main_title">IBSheet8</span>
       <p class="sub_title">Loader를 사용하여 IBSheet8의 대용량 조회, 높은 자유도, 다양한 렌더링 방식 등 다양한 기능을 Angular 환경에서 제공합니다.</p>
       <div style="padding-top: 20px;">
-        <a class="title_button_sandbox" mat-raised-button href="https://www.google.com/" target="_blank">
+        <a class="title_button_sandbox" mat-raised-button href="https://stackblitz.com/edit/github-qggetz-xqvocg?file=src%2Fapp%2Fapp.component.ts,src%2Findex.html" target="_blank">
           <fa-icon [icon]="['fas', 'code']"></fa-icon>
           SANDBOX
         </a>
