ibsheet-angular 컴포넌트 적용

--- a/src/app/dialog/dialog.html
+++ b/src/app/dialog/dialog.html
@@ -4,5 +4,9 @@
   <div class="example-button-row">
     <button mat-raised-button (click)="onOpenDialog();" color="primary">MATERIAL UI</button>
   </div>
-  <div id="sheetDiv" style="width: 100%; height: 70vh;"></div>
+  <ibsheet-angular
+    [options]="sheetOptions"
+    [style]="{width: '100%', height: '70vh'}"
+    (instance)="getInstance($event)"
+  />
 </div>
