--- a/src/app/dialog/dialog.matertial.html
+++ b/src/app/dialog/dialog.matertial.html
@@ -1,6 +1,10 @@
 <h1 mat-dialog-title>Material Modal</h1>
 <div mat-dialog-content>
-  <div id="dialogDiv" style="width: 100%; height: 35vh;"></div>
+  <ibsheet-angular
+    [options]="sheetOptions"
+    [style]="{width: '100%', height: '70vh'}"
+    (instance)="getInstance($event)"
+  />
 </div>
 <div mat-dialog-actions align="end">
   <button mat-raised-button color="accent" (click)="close()">Close</button>
