--- a/src/app/merge/merge.html
+++ b/src/app/merge/merge.html
@@ -25,5 +25,9 @@
       </mat-option>
     </mat-select>
   </mat-form-field>
-  <div id="sheetDiv" style="width: 100%; height: 70vh;"></div>
+  <ibsheet-angular
+    [options]="sheetOptions"
+    [style]="{width: '100%', height: '70vh'}"
+    (instance)="getInstance($event)"
+  />
 </div>
