--- a/src/app/master-detail/master-detail.html
+++ b/src/app/master-detail/master-detail.html
@@ -2,7 +2,19 @@
   <span class="desc_title">마스터/디테일 기능</span>
   <p class="desc_sub">두 개의 시트를 이용하여 한 시트의 행 이동 시, 다른 시트의 데이터를 로드하는 방법을 알아봅시다.</p>
   <div style="display: flex;">
-    <div id="sheetDiv1" style="width: 30%; height: 70vh;"></div>
-    <div id="sheetDiv2" style="width: 69%; height: 70vh;"></div>
+    <div style="width: 30%;">
+      <ibsheet-angular
+        [options]="sheetOptions"
+        [style]="{width: '100%', height: '70vh'}"
+        (instance)="getInstance($event)"
+      />
+    </div>
+    <div style="width: 69%;">
+      <ibsheet-angular
+        [options]="sheetOptions2"
+        [style]="{width: '100%', height: '70vh'}"
+        (instance)="getInstance2($event)"
+      />
+    </div>
   </div>
 </div>
