--- a/src/app/multiple/multiple.html
+++ b/src/app/multiple/multiple.html
@@ -6,8 +6,29 @@
     <button mat-raised-button (click)="onSheetState('remove');">시트 지우기</button>
   </div>
   <div style="display: flex;">
-    <div id="sheetDiv1" style="width: 33%; height: 70vh;"></div>
-    <div id="sheetDiv2" style="width: 33%; height: 70vh;"></div>
-    <div id="sheetDiv3" style="width: 33%; height: 70vh;"></div>
+    <div style="width: 33%;">
+      <ibsheet-angular
+        *ngIf="isSheetVisible"
+        [options]="sheetOptions"
+        [style]="{width: '100%', height: '70vh'}"
+        (instance)="getInstance($event)"
+      />
+    </div>
+    <div style="width: 33%;">
+      <ibsheet-angular
+        *ngIf="isSheetVisible"
+        [options]="sheetOptions2"
+        [style]="{width: '100%', height: '70vh'}"
+        (instance)="getInstance2($event)"
+      />
+    </div>
+    <div style="width: 33%;">
+      <ibsheet-angular
+        *ngIf="isSheetVisible"
+        [options]="sheetOptions3"
+        [style]="{width: '100%', height: '70vh'}"
+        (instance)="getInstance3($event)"
+      />
+    </div>
   </div>
 </div>
