--- a/src/app/serverscrollpaging/serverscrollpaging.html
+++ b/src/app/serverscrollpaging/serverscrollpaging.html
@@ -1,5 +1,9 @@
 <div>
   <span class="desc_title">서버 스크롤 페이징</span>
   <p class="desc_sub">서버에서 데이터를 받아서 스크롤 페이징을 하는 방법을 소개합니다.</p>
-  <div id="sheetDiv" style="width: 100%; height: 70vh;"></div>
+  <ibsheet-angular
+    [options]="sheetOptions"
+    [style]="{width: '100%', height: '70vh'}"
+    (instance)="getInstance($event)"
+  />
 </div>
