--- a/src/app/type/type.html
+++ b/src/app/type/type.html
@@ -3,5 +3,11 @@
     <span class="desc_title">컬럼 별 타입</span>
     <p class="desc_sub">각 컬럼별 설정 가능한 Type에 대한 예제입니다.</p>
   </div>
-  <div id="sheetDiv" style="width: 100%; height: 70vh;"></div>
+  <!--
+    <div id="sheetDiv" style="width: 100%; height: 70vh;"></div>
+  -->
+  <ibsheet-angular
+    [options]="sheetOptions"
+    [style]="{ width: '100%', height: '70vh' }"
+  />
 </div>
